tests/rosetta/out/Java/constrained-random-points-on-a-circle-1.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// constrained-random-points-on-a-circle-1.mochi
import java.util.*;

public class ConstrainedRandomPointsOnACircle1 {
    public static void main(String[] args) {
        int nPts = 100;
        int rMin = 10;
        int rMax = 15;
        int span = rMax + 1 + rMax;
        List<List<String>> rows = Arrays.asList();
        int r = 0;
        while (r < span) {
            List<String> row = Arrays.asList();
            int c = 0;
            while (c < span * 2) {
                row.add(" ");
                c = (int)(c + 1);
            }
            rows.add(row);
            r = (int)(r + 1);
        }
        int u = 0;
        Map<String,Boolean> seen = new LinkedHashMap<String,Boolean>();
        int min2 = rMin * rMin;
        int max2 = rMax * rMax;
        int n = 0;
        while (n < nPts) {
            int x = System.currentTimeMillis() % span - rMax;
            int y = System.currentTimeMillis() % span - rMax;
            int rs = x * x + y * y;
            if (rs < min2 || rs > max2) {
                continue;
            }
            n = (int)(n + 1);
            int row = y + rMax;
            int col = (x + rMax) * 2;
            ((List)rows.get(row)).set(col, "*");
            String key = String.valueOf(row) + "," + String.valueOf(col);
            if (!((Boolean)seen.get(key))) {
                seen.put(key, true);
                u = (int)(u + 1);
            }
        }
        int i = 0;
        while (i < span) {
            String line = "";
            int j = 0;
            while (j < span * 2) {
                line = line + ((Number)((List)rows.get(i)).get(j)).doubleValue();
                j = (int)(j + 1);
            }
            System.out.println(line);
            i = (int)(i + 1);
        }
        System.out.println(String.valueOf(u) + " unique points");
    }
}
